# Sage

sage-code/: .gitignore  Dockerfile.rocm  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
sage-code/.github/workflows/: benchmarks.yml  ci.yml
sage-code/configs/: aode_hyperparams.yaml  tools.yaml  vllm_implementer.yaml  vllm_redteam.yaml
sage-code/demos/: app_gradio.py  demo_h100_simulation.py  demo_sage_code.py  demo_swe_bench.py
sage-code/docs/: DEPLOYMENT.md  HARDWARE_NECESSITY_PROOF.md
sage-code/sage/agents/: architect.py  synthesizer.py
sage-code/sage/api/: schemas.py  server.py  streaming.py
sage-code/sage/benchmarks/: livecodebench.py
sage-code/sage/core/: crucible.py  graph.py  routing.py  torsion.py
sage-code/sage/prompts/: synthesizer.md  torsion_suffixes.md
sage-code/sage/tests/: test_aode_operators.py  test_crucible_convergence.py  test_lie_bracket_nonzero.py
sage-code/sage/tools/: benchmarker.py  complexity.py  grounding.py  linter.py  sandbox.py
sage-code/scripts/: cloud_bootstrap.sh  launch_coresident.py  quantize_awq.py
sage-pro/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DIAGNOSTIC_REPORT.md  Dockerfile.rocm  Makefile  README.md  SAGE_PROJECT_BRIEF.md  app.py  docker-compose.yml  requirements-core.txt  requirements-dev.txt  requirements.txt  sage_cinematic_intro.html
sage-pro/Frontend/: Dockerfile  README.md  app.py  requirements.txt
sage-pro/configs/: aode_hyperparams.yaml  vllm_architect.yaml  vllm_implementer.yaml  vllm_redteam.yaml  vllm_synthesizer.yaml
sage-pro/docs/: BENCHMARKS.md  (+5 more)
(+71 files in other folders)
