[project]
name = "sage-code"
version = "0.1.0"
description = "Adversarially-hardened pro coding engine on AMD MI300X"
authors = [{ name = "SAGE-CODE Team" }]
dependencies = [
    "vllm==0.6.0",
    "torch==2.4.0",
    "langgraph==0.2.14",
    "fastapi==0.112.0",
    "gradio==4.40.0",
    "gudhi==3.10.1",
    "faiss-cpu==1.8.0",
    "sentence-transformers==3.0.1",
    "structlog==24.4.0",
    "pydantic==2.8.2",
    "numpy==1.26.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["sage/tests"]
addopts = "--cov=sage --cov-fail-under=85"
